@@ -26,22 +26,17 @@ package qupath.lib.gui.viewer;
 import java.awt.*;
 import java.awt.geom.*;
 import java.awt.image.BufferedImage;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
+import java.util.*;
 import java.util.List;
-import java.util.Map;
-import java.util.WeakHashMap;
 
-import javafx.scene.shape.Path;
-import javafx.scene.shape.PathBuilder;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import qupath.lib.awt.color.ColorToolsAwt;
 import qupath.lib.awt.common.AwtTools;
+import qupath.lib.color.ColorToolsAwt;
 import qupath.lib.geom.Arrow2D;
 import qupath.lib.geom.Point2;
+import qupath.lib.gui.helpers.ColorToolsFX;
 import qupath.lib.gui.helpers.MeasurementMapper;
 import qupath.lib.gui.prefs.PathPrefs;
 import qupath.lib.objects.PathCellObject;
@@ -49,20 +44,25 @@ import qupath.lib.objects.PathDetectionObject;
 import qupath.lib.objects.PathObject;
 import qupath.lib.objects.PathObjectConnectionGroup;
 import qupath.lib.objects.PathObjectConnections;
+import qupath.lib.objects.PathObjectTools;
 import qupath.lib.objects.PathTileObject;
 import qupath.lib.objects.TMACoreObject;
 import qupath.lib.objects.classes.PathClass;
-import qupath.lib.objects.helpers.PathObjectColorToolsAwt;
-import qupath.lib.objects.helpers.PathObjectTools;
+import qupath.lib.objects.classes.PathClassFactory;
+import qupath.lib.objects.classes.PathClassFactory.StandardPathClasses;
 import qupath.lib.objects.hierarchy.PathObjectHierarchy;
 import qupath.lib.objects.hierarchy.TMAGrid;
 import qupath.lib.objects.hierarchy.events.PathObjectSelectionModel;
 import qupath.lib.plugins.ParallelTileObject;
 import qupath.lib.regions.ImageRegion;
+import qupath.lib.roi.EllipseROI;
+import qupath.lib.roi.LineROI;
+import qupath.lib.roi.RoiTools;
+import qupath.lib.roi.PointsROI;
+import qupath.lib.roi.RectangleROI;
+import qupath.lib.roi.RoiEditor;
+import qupath.lib.roi.ShapeSimplifier;
 import qupath.lib.roi.*;
-import qupath.lib.roi.interfaces.PathArea;
-import qupath.lib.roi.interfaces.PathPoints;
-import qupath.lib.roi.interfaces.PathShape;
 import qupath.lib.roi.interfaces.ROI;
 
 
@@ -81,12 +81,13 @@ public class PathHierarchyPaintingHelper {
 	private static ShapeProvider shapeProvider = new ShapeProvider();
 	
 	private static Map<Number, Stroke> strokeMap = new HashMap<>();
-	
+	private static Map<Number, Stroke> dashedStrokeMap = new HashMap<>();
+
 	private PathHierarchyPaintingHelper() {}
 
 	/**
 	 * Create a thumbnail image, with the overlay painted.
-	 * If a BufferedImage is supplied, it will be used if it has the required width & height - otherwise a new one will be generated.
+	 * If a BufferedImage is supplied, it will be used if it has the required width &amp; height - otherwise a new one will be generated.
 	 * 
 	 * @param overlayOptions
 	 * @param serverWidth
@@ -210,7 +211,7 @@ public class PathHierarchyPaintingHelper {
 				float xf = (float)(pDest.getX() - width/2.0);
 				float yf = (float)(pDest.getY() + fm.getDescent());
 				
-				Color colorPainted = PathObjectColorToolsAwt.getDisplayedColorAWT(core);
+				Color colorPainted = ColorToolsAwt.getCachedColor(ColorToolsFX.getDisplayedColorARGB(core));
 				double mean = (colorPainted.getRed() + colorPainted.getGreen() + colorPainted.getBlue()) / (255.0 * 3.0);
 				if (mean > 0.5)
 					g2d.setColor(ColorToolsAwt.TRANSLUCENT_BLACK);
@@ -248,7 +249,7 @@ public class PathHierarchyPaintingHelper {
 		// Always paint the selected object
 		// Note: this makes the assumption that child ROIs are completely contained within their parents;
 		//			this probably should be the case, but isn't guaranteed
-		boolean isSelected = (selectionModel != null && selectionModel.isSelected(pathObject)) && (PathPrefs.getUseSelectedColor() || !pathObject.isPoint());
+		boolean isSelected = (selectionModel != null && selectionModel.isSelected(pathObject)) && (PathPrefs.getUseSelectedColor() || !PathObjectTools.hasPointROI(pathObject));
 		boolean isDetectedObject = pathObject.isDetection() || (pathObject.isTile() && pathObject.hasMeasurements());
 		
 		// Check if the PathClass isn't being shown
@@ -265,16 +266,12 @@ public class PathHierarchyPaintingHelper {
 			double roiBoundsY = pathROI.getBoundsY();
 			double roiBoundsWidth = pathROI.getBoundsWidth();
 			double roiBoundsHeight = pathROI.getBoundsHeight();
-			if (pathObject.isPoint()
-					|| boundsDisplayed == null
-					|| pathROI instanceof LineROI
-					|| boundsDisplayed.intersects(roiBoundsX, roiBoundsY, Math.max(roiBoundsWidth, 1), Math.max(roiBoundsHeight, 1))) {
+			if (PathObjectTools.hasPointROI(pathObject) || boundsDisplayed == null ||
+					pathROI instanceof LineROI || 
+					boundsDisplayed.intersects(roiBoundsX, roiBoundsY, Math.max(roiBoundsWidth, 1), Math.max(roiBoundsHeight, 1))) {
 			
 				// Paint the ROI, if necessary
-				if (isSelected
-						|| (overlayOptions.getShowObjects() && isDetectedObject)
-						|| (overlayOptions.getShowAnnotations() && pathObject.isAnnotation())
-						|| (overlayOptions.getShowTMAGrid() && pathObject.isTMACore())) {
+				if (isSelected || (overlayOptions.getShowDetections() && isDetectedObject) || (overlayOptions.getShowAnnotations() && pathObject.isAnnotation()) || (overlayOptions.getShowTMAGrid() && pathObject.isTMACore())) {
 		
 					boolean doFill = overlayOptions.getFillObjects() || pathObject instanceof ParallelTileObject;
 					boolean doOutline = true;
@@ -304,7 +301,7 @@ public class PathHierarchyPaintingHelper {
 								doOutline = doOutline && !pathObject.isTile();
 						}
 						else {
-							Integer rgb = PathObjectColorToolsAwt.getDisplayedColor(pathObject);
+							Integer rgb = ColorToolsFX.getDisplayedColorARGB(pathObject);
 							color = ColorToolsAwt.getCachedColor(rgb);
 						}
 //							color = PathObjectHelpers.getDisplayedColor(pathObject);
@@ -327,7 +324,7 @@ public class PathHierarchyPaintingHelper {
 					} else {
 						Stroke stroke = null;
 						// Decide whether to fill or not
-						Color colorFill = doFill && (isDetectedObject || pathObject.isPoint()) ? color : null;
+						Color colorFill = doFill && (isDetectedObject || PathObjectTools.hasPointROI(pathObject)) ? color : null;
 						if (colorFill != null && fillOpacity != 1) {
 							if (pathObject instanceof ParallelTileObject)
 								colorFill = ColorToolsAwt.getMoreTranslucentColor(colorFill);
@@ -356,7 +353,12 @@ public class PathHierarchyPaintingHelper {
 						}
 						else {
 							double thicknessScale = downsample * (isSelected && !PathPrefs.getUseSelectedColor() ? 1.6 : 1);
-							stroke = getCachedStroke(PathPrefs.getThickStrokeThickness() * thicknessScale);
+							float thickness = (float)(PathPrefs.getThickStrokeThickness() * thicknessScale);
+							if (isSelected && pathObject.getParent() == null && PathPrefs.isSelectionMode()) {
+								stroke = getCachedStrokeDashed(thickness);
+							} else {
+								stroke = getCachedStroke(thickness);
+							}
 						}
 						
 						g.setStroke(stroke);
@@ -367,10 +369,10 @@ public class PathHierarchyPaintingHelper {
 							if (overlayOptions.getShowCellNuclei())
 								paintROI(cell.getNucleusROI(), g, colorStroke, stroke, colorFill, downsample);
 							painted = true;
-						} else {
+						} else { // todo: MERGEFIX
 							if (pathROI instanceof ArrowROI
-									|| (overlayOptions.getFillAnnotations() && pathObject.isAnnotation())
-									|| (pathObject.isTMACore() && overlayOptions.getShowTMACoreLabels()))
+							        || (overlayOptions.getFillAnnotations() && pathObject.isAnnotation() && pathObject.getPathClass() != PathClassFactory.getPathClass(PathClassFactory.StandardPathClasses.REGION))
+                                    || (pathObject.isTMACore() && overlayOptions.getShowTMACoreLabels()))
 								paintROI(pathROI, g, colorStroke, stroke, ColorToolsAwt.getMoreTranslucentColor(colorStroke), downsample);
 							else
 								paintROI(pathROI, g, colorStroke, stroke, colorFill, downsample);
@@ -382,7 +384,7 @@ public class PathHierarchyPaintingHelper {
 		}
 		// Paint the children, if necessary
 		if (paintChildren) {
-			for (PathObject childObject : pathObject.getChildObjects()) {
+			for (PathObject childObject : pathObject.getChildObjectsAsArray()) {
 				// Only call the painting method if required
 				ROI childROI = childObject.getROI();
 				if ((childROI != null && boundsDisplayed.intersects(childROI.getBoundsX(), childROI.getBoundsY(), childROI.getBoundsWidth(), childROI.getBoundsHeight()))
@@ -406,12 +408,17 @@ public class PathHierarchyPaintingHelper {
 			return;
 		
 		Graphics2D g2d = (Graphics2D)g.create();
-		if (pathROI instanceof PathShape) {
-			Shape shape = shapeProvider.getShape((PathShape)pathROI, downsample);
+		if (RoiTools.isShapeROI(pathROI)) {
+//			Shape shape = pathROI.getShape();
+			Shape shape = shapeProvider.getShape(pathROI, downsample);
 //			Shape shape = PathROIToolsAwt.getShape(pathROI);
-			paintShape(shape, g, colorStroke, stroke, colorFill, downsample);
-		} else if (pathROI instanceof PathPoints) {
-			paintPoints((PathPoints)pathROI, g2d, PathPrefs.getDefaultPointRadius(), colorStroke, stroke, colorFill, downsample);
+			// Only pass the colorFill if we have an area (i.e. not a line/polyline)
+			if (pathROI.isArea())
+				paintShape(shape, g, colorStroke, stroke, colorFill, downsample);
+			else if (pathROI.isLine())
+				paintShape(shape, g, colorStroke, stroke, null, downsample);
+		} else if (pathROI.isPoint()) {
+			paintPoints(pathROI, g2d, PathPrefs.getDefaultPointRadius(), colorStroke, stroke, colorFill, downsample);
 		}
 		g2d.dispose();
 	}
@@ -470,7 +477,7 @@ public class PathHierarchyPaintingHelper {
 		}
 
 	}
-	
+
 	/**
 	 * 
 	 * Convert PathShapes into Java AWT Shapes, reusing existing objects where possible in a thread-safe way.
@@ -494,20 +501,20 @@ public class PathHierarchyPaintingHelper {
 
 		// TODO: Consider if it makes sense to map to PathHierarchyImageServer preferred downsamples
 		// (Only if shape simplification is often used for detection objects)
-		private Map<PathShape, Shape> map50 = Collections.synchronizedMap(new WeakHashMap<>());
-		private Map<PathShape, Shape> map20 = Collections.synchronizedMap(new WeakHashMap<>());
-		private Map<PathShape, Shape> map10 = Collections.synchronizedMap(new WeakHashMap<>());
-		private Map<PathShape, Shape> map = Collections.synchronizedMap(new WeakHashMap<>());
+		private Map<ROI, Shape> map50 = Collections.synchronizedMap(new WeakHashMap<>());
+		private Map<ROI, Shape> map20 = Collections.synchronizedMap(new WeakHashMap<>());
+		private Map<ROI, Shape> map10 = Collections.synchronizedMap(new WeakHashMap<>());
+		private Map<ROI, Shape> map = Collections.synchronizedMap(new WeakHashMap<>());
 		
 		
-		private Map<PathShape, Shape> getMap(final PathShape shape, final double downsample) {
+		private Map<ROI, Shape> getMap(final ROI shape, final double downsample) {
 			// If we don't have many vertices, just return the main map - no need to simplify
-			int nVertices = 0;
-			if (shape instanceof PolygonROI)
-				nVertices = ((PolygonROI)shape).nVertices();
-			else if (shape instanceof AreaROI)
-				nVertices = ((AreaROI)shape).nVertices();
-			if (nVertices < MIN_SIMPLIFY_VERTICES)
+			int nVertices = shape.getNumPoints();
+//			if (shape instanceof PolygonROI)
+//				nVertices = ((PolygonROI)shape).nVertices();
+//			else if (shape instanceof AreaROI)
+//				nVertices = ((AreaROI)shape).nVertices();
+			if (nVertices < MIN_SIMPLIFY_VERTICES || !shape.isArea())
 				return map;
 			
 			if (downsample > 50)
@@ -519,18 +526,18 @@ public class PathHierarchyPaintingHelper {
 			return map;
 		}
 		
-		private Shape simplifyByDownsample(final Shape shape, final double downsample) {
+		private static Shape simplifyByDownsample(final Shape shape, final double downsample) {
 			if (downsample > 50)
-				return ShapeSimplifierAwt.simplifyPath(shape instanceof Path2D ? (Path2D)shape : new Path2D.Float(shape), 100);
+				return ShapeSimplifier.simplifyPath(shape instanceof Path2D ? (Path2D)shape : new Path2D.Float(shape), 50);
 			if (downsample > 20)
-				return ShapeSimplifierAwt.simplifyPath(shape instanceof Path2D ? (Path2D)shape : new Path2D.Float(shape), 40);
+				return ShapeSimplifier.simplifyPath(shape instanceof Path2D ? (Path2D)shape : new Path2D.Float(shape), 20);
 			if (downsample > 10)
-				return ShapeSimplifierAwt.simplifyPath(shape instanceof Path2D ? (Path2D)shape : new Path2D.Float(shape), 20);
+				return ShapeSimplifier.simplifyPath(shape instanceof Path2D ? (Path2D)shape : new Path2D.Float(shape), 10);
 			return shape;
 		}
 		
 		
-		public Shape getShape(final PathShape roi, final double downsample) {
+		public Shape getShape(final ROI roi, final double downsample) {
 			if (roi instanceof RectangleROI) {
 				Rectangle2D rectangle = rectanglePool.getShape();
 				rectangle.setFrame(roi.getBoundsX(), roi.getBoundsY(), roi.getBoundsWidth(), roi.getBoundsHeight());
@@ -557,14 +564,18 @@ public class PathHierarchyPaintingHelper {
 				return line;
 			}
 
-			Map<PathShape, Shape> map = getMap(roi, downsample);
+			Map<ROI, Shape> map = getMap(roi, downsample);
 //			map.clear();
 			Shape shape = map.get(roi);
 			if (shape == null) {
-				shape = PathROIToolsAwt.getShape(roi);
+				shape = RoiTools.getShape(roi);
 				// Downsample if we have to
-				if (map != this.map)
+				if (map != this.map) {
+//					shape = GeometryTools.geometryToShape(
+//							VWSimplifier.simplify(roi.getGeometry(), downsample)
+//							);
 					shape = simplifyByDownsample(shape, downsample);
+				}
 				map.put(roi, shape);
 			}
 //			map.clear();
@@ -607,18 +618,40 @@ public class PathHierarchyPaintingHelper {
 			g2d.setColor(colorStroke);
 			g2d.draw(shape);
 		}
+
+		// TODO: Find a way to incorporate arrow heads
+//		if (shape instanceof Line2D) {
+//			Line2D line = (Line2D)shape;
+//			double x1 = line.getX1();
+//			double y1 = line.getY1();
+//			double x2 = line.getX2();
+//			double y2 = line.getY2();
+//			double dx = x1 - x2;
+//			double dy = y1 - y2;
+//			double length = Math.sqrt(dx*dx + dy*dy);
+//			// Unit vectors & perpendicular
+//			dx /= length;
+//			dy /= length;
+//			double px = dy;
+//			double py = -dx;
+//			double scale = Math.min(length / 5.0, downsample * 40);
+//			line.setLine(x1, y1, x1-dx*scale+px*scale/2, y1-dy*scale+py*scale/2);
+//			g2d.draw(line);
+//			line.setLine(x1, y1, x1-dx*scale-px*scale/2, y1-dy*scale-py*scale/2);
+//			g2d.draw(line);
+//		}
 	}
 
 	
-	public static void paintPoints(PathPoints pathPoints, Graphics2D g2d, double radius, Color colorStroke, Stroke stroke, Color colorFill, double downsample) {
+	public static void paintPoints(ROI pathPoints, Graphics2D g2d, double radius, Color colorStroke, Stroke stroke, Color colorFill, double downsample) {
 		PointsROI pathPointsROI = pathPoints instanceof PointsROI ? (PointsROI)pathPoints : null;
 		if (pathPointsROI != null && PathPrefs.getShowPointHulls()) {
-			PathArea convexHull = pathPointsROI.getConvexHull();
+			ROI convexHull = pathPointsROI.getConvexHull();
 			if (convexHull != null) {
 				Color colorHull = colorFill != null ? colorFill : colorStroke;
 				colorHull = ColorToolsAwt.getColorWithOpacity(colorHull, 0.1);
 				if (colorHull != null)
-					paintShape(PathROIToolsAwt.getShape(convexHull), g2d, null, null, colorHull, downsample);
+					paintShape(RoiTools.getShape(convexHull), g2d, null, null, colorHull, downsample);
 //					getConvexHull().draw(g, null, colorHull);
 			}
 		}
@@ -627,11 +660,11 @@ public class PathHierarchyPaintingHelper {
 		
 //		double radius = pathPointsROI == null ? PointsROI.getDefaultPointRadius() : pathPointsROI.getPointRadius();
 		// Ensure that points are drawn with at least a radius of one, after any transforms have been applied
-		double scale = downsample;
+		double scale = Math.max(1, downsample);
 		radius = (Math.max(1 / scale, radius));
 		
 		g2d.setStroke(stroke);
-		for (Point2 p : pathPoints.getPointList()) {
+		for (Point2 p : pathPoints.getAllPoints()) {
 			ellipse.setFrame(p.getX()-radius, p.getY()-radius, radius*2, radius*2);
 			if (colorFill != null) {
 				g2d.setColor(colorFill);
@@ -643,9 +676,19 @@ public class PathHierarchyPaintingHelper {
 			}
 		}
 	}
+	
+	
+	static Stroke getCachedStrokeDashed(final Number thickness) {
+		Stroke stroke = dashedStrokeMap.get(thickness);
+		if (stroke == null) {
+			stroke = new BasicStroke(
+					thickness.floatValue(),
+					BasicStroke.CAP_BUTT, BasicStroke.JOIN_MITER, 10f, new float[] {thickness.floatValue() * 5f}, 0f);
+			dashedStrokeMap.put(thickness, stroke);
+		}
+		return stroke;
+	}
 
-	
-	
 	static Stroke getCachedStroke(final Number thickness) {
 		Stroke stroke = strokeMap.get(thickness);
 		if (stroke == null) {
@@ -662,44 +705,87 @@ public class PathHierarchyPaintingHelper {
 	public static Stroke getCachedStroke(final double thickness) {
 		if (thickness == Math.rint(thickness))
 			return getCachedStroke((int)thickness);
-		return getCachedStroke(new Float(thickness));
+		return getCachedStroke(Float.valueOf((float)thickness));
 	}
 	
 	
 	/**
 	 * Paint the handles onto a Graphics object, if we have a suitable (non-point) ROI.
-	 * 
+	 * <p>
+	 * The minimum and maximum handle size can be specified; if the same, all handles will have the same size.  If different,
+	 * then the distance between consecutive handles will be used to influence the actual handle size.  This is helpful
+	 * when handles are densely packed.
+	 *
 	 * @param g2d
-	 * @param handleSize The width & height of the shape used to draw the handles
+	 * @param minHandleSize
+	 * @param maxHandleSize
 	 * @param colorStroke
 	 * @param colorFill
 	 */
-	public static void paintHandles(final RoiEditor roiEditor, final Graphics2D g2d, final double handleSize, final Color colorStroke, final Color colorFill) {		
+	public static void paintHandles(final RoiEditor roiEditor, final Graphics2D g2d, final double minHandleSize, final double maxHandleSize, final Color colorStroke, final Color colorFill) {
 		if (!(roiEditor.getROI() instanceof PointsROI))
-			paintHandles(roiEditor.getHandles(), g2d, handleSize, colorStroke, colorFill);
+			paintHandles(roiEditor.getHandles(), g2d, minHandleSize, maxHandleSize, colorStroke, colorFill);
 	}
 
 		/**
 		 * Paint the handles onto a Graphics object.
 		 * 
 		 * @param g2d
-		 * @param handleSize The width & height of the shape used to draw the handles
+		 * @param handleSize The width &amp; height of the shape used to draw the handles
 		 * @param colorStroke
 		 * @param colorFill
 		 */
-		public static void paintHandles(final List<Point2> handles, final Graphics2D g2d, final double handleSize, final Color colorStroke, final Color colorFill) {		
+	/**
+	 * Paint the handles onto a Graphics object, if we have a suitable (non-point) ROI.
+	 * <p>
+	 * The minimum and maximum handle size can be specified; if the same, all handles will have the same size.  If different,
+	 * then the distance between consecutive handles will be used to influence the actual handle size.  This is helpful
+	 * when handles are densely packed.
+	 *
+	 * @param handles
+	 * @param g2d
+	 * @param minHandleSize
+	 * @param maxHandleSize
+	 * @param colorStroke
+	 * @param colorFill
+	 */
+	public static void paintHandles(final List<Point2> handles, final Graphics2D g2d, final double minHandleSize, final double maxHandleSize, final Color colorStroke, final Color colorFill) {
 			RectangularShape handleShape = new Rectangle2D.Double();
 //			handleShape = new Ellipse2D.Double();
 		
-		for (Point2 p : handles) {
-			handleShape.setFrame(p.getX()-handleSize/2, p.getY()-handleSize/2, handleSize, handleSize);
-			if (colorFill != null) {
-				g2d.setColor(colorFill);
-				g2d.fill(handleShape);
+		int n = handles.size();
+		if (minHandleSize == maxHandleSize) {
+			for (Point2 p : handles) {
+				double handleSize = minHandleSize;
+				handleShape.setFrame(p.getX()-handleSize/2, p.getY()-handleSize/2, handleSize, handleSize);
+				if (colorFill != null) {
+					g2d.setColor(colorFill);
+					g2d.fill(handleShape);
+				}
+				if (colorStroke != null) {
+					g2d.setColor(colorStroke);
+					g2d.draw(handleShape);
+				}
 			}
-			if (colorStroke != null) {
-				g2d.setColor(colorStroke);
-				g2d.draw(handleShape);
+			return;
+		} else {
+			for (int i = 0; i < handles.size(); i++) {
+				var current = handles.get(i);
+				var before = handles.get((i + n - 1) % n);
+				var after = handles.get((i + 1) % n);
+				double distance = Math.sqrt(Math.min(current.distanceSq(before), current.distanceSq(after))) * 0.5;
+				double size = Math.max(minHandleSize, Math.min(distance, maxHandleSize));
+
+				var p = current;
+				handleShape.setFrame(p.getX()-size/2, p.getY()-size/2, size, size);
+				if (colorFill != null) {
+					g2d.setColor(colorFill);
+					g2d.fill(handleShape);
+				}
+				if (colorStroke != null) {
+					g2d.setColor(colorStroke);
+					g2d.draw(handleShape);
+				}
 			}
 		}
 	}
